# pprocess

./: .gitignore  CMakeLists.txt  README.md
src/pprocess/: main.cpp
src/pprocess/commands/: generate.h  preview.h
src/pprocess/parser/: CliParser.cpp  CliParser.h  HelpPrinter.h
